# Neurosha

./: CMakeLists.txt  README.md  main.cpp
neurosha/: exception.hpp  functions.hpp  head.h  vector.hpp
tests/scripts/: activation_function.py
